Se soluciona logout

--- a/src/main/resources/uy/gub/dgr/sur/util/messages.properties
+++ b/src/main/resources/uy/gub/dgr/sur/util/messages.properties
@@ -8,7 +8,7 @@ no=No
 true=Sí
 false=No
 defaultTitle=
-defaultFooterTitle=Sistema de mantenimientos preventivos
+defaultFooterTitle=Sistema Único Registral
 authenticationFailed=Error al ingresar al sistema, verifique usuario o contraseña ingresada.
 noRecordSelected=No se seleccionó ningún registro.
 noRecordsFound=No se encontraron resultados.
@@ -18,17 +18,6 @@ currentPageReportTemplate={startRecord}-{endRecord} de {totalRecords}
 datePattern=dd/MM/yyyy
 dateTimePattern=dd/MM/yyyy HH:mm
 
-listTitle=hasCode.com - Java EE 6 Blog Tutorial - Blog entries overview
-listHeading=Blog entries overview
-newArticle=Create new blog entry
-amountEntries=Blog entries available
-author=Author
-options=Options
-delete=Delete
-created=Created
-
-createTitle=hasCode.com - Java EE 6 Blog Tutorial - Create a new blog entry
-createHeading=Create a new blog entry
 title=Title
 content=Content
 save=Save article
