Avances en interfaz grafica

--- a/src/main/resources/uy/gub/dgr/sur/util/messages.properties
+++ b/src/main/resources/uy/gub/dgr/sur/util/messages.properties
@@ -7,8 +7,9 @@ yes=Sí
 no=No
 true=Sí
 false=No
-defaultTitle=
-defaultFooterTitle=Sistema Único Registral
+defaultTitle=Sistema Único Registral
+label_titulo=d | g | r  - dirección general de registros
+defaultFooterTitle=d | g | r - dirección general de registros | división informática | 2016
 authenticationFailed=Error al ingresar al sistema, verifique usuario o contraseña ingresada.
 noRecordSelected=No se seleccionó ningún registro.
 noRecordsFound=No se encontraron resultados.
